--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,18 @@
 [submodule "iptables"]
 	path = iptables
 	url = git://git.netfilter.org/iptables
+[submodule "libmnl"]
+	path = libmnl
+	url = git://git.netfilter.org/libmnl
+[submodule "libnetfilter_conntrack"]
+	path = libnetfilter_conntrack
+	url = git://git.netfilter.org/libnetfilter_conntrack
+[submodule "libnetfilter_queue"]
+	path = libnetfilter_queue
+	url = git://git.netfilter.org/libnetfilter_queue
+[submodule "libnfnetlink"]
+	path = libnfnetlink
+	url = git://git.netfilter.org/libnfnetlink
+[submodule "conntrack-tools"]
+	path = conntrack-tools
+	url = git://git.netfilter.org/conntrack-tools
